--- a/lab-2.html
+++ b/lab-2.html
@@ -78,6 +78,8 @@
                 ✅ Стильно и необычно: Вы будете выглядеть как герой футуристического блокбастера (готовьтесь к вопросам "Где купить?!").<br />
                 ✅ Многофункциональность: Используйте как маску для сна, плед-трансформер или костюм для Хэллоуина ("Человек-нора" — беспроигрышный вариант!).<br />
             </p>
+            <br/>
+            <a href="game js.html">Go to Game</a>
 
         </div>
         <div class="box-3">
